[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
risc0-circuit-recursion = "2.0.1"
risc0-binfmt = "2.0.1"
risc0-zkp = "2.0.1"
sha2 = "0.9"
blake3 = "1.8.2"

ark-groth16 = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4" }
ark-serialize = { version = "0.4" }
ark-ff = { version = "0.4" }

[patch.crates-io]
ark-ff = { git = "https://github.com/fiamma-chain/algebra", branch = "bitvm" }
ark-ec = { git = "https://github.com/fiamma-chain/algebra", branch = "bitvm" }
ark-serialize = { git = "https://github.com/fiamma-chain/algebra", branch = "bitvm" }
ark-poly = { git = "https://github.com/fiamma-chain/algebra", branch = "bitvm" }